<resources>
    <string name="app_name">Wreaking News</string>
    <string name="news_date">news_date</string>
    <string name="header">Header</string>
    <string name="deleteAll">Clear All</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="source">CNN</string>
    <string name="searching_news">Поиск новости</string>
    <string name="breaking_news">Свежие новости</string>
    <string name="favorites">Избранные</string>
    <string name="publishDate">01 January 1980</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>


</resources>