<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/news_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />
    </FrameLayout>

        <TextView
            android:id="@+id/header"
            android:textSize="@dimen/header_size"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/header"
            />
        <TextView
            android:id="@+id/description"
            android:textSize="@dimen/description_size"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            />
        <TextView
            android:id="@+id/source"
            android:textStyle="bold"
            android:textSize="@dimen/header_size"
            android:text="@string/source"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>
    </androidx.cardview.widget.CardView>


